--- a/styles/global.css
+++ b/styles/global.css
@@ -59,3 +59,12 @@ header {
 a {
   text-decoration: none;
 }
+
+.flex {
+  display: flex;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
